README
This is a collection of no-op statements that are syntactically valid
only since Python *X*.\ *Y*, for most *X*.\ *Y* ≥ 2.4.

For example:

.. code:: python

   0_0  # Python >= 3.6 is required

The idea is to put such a statement near the top of your file.
If a user inadvertently ran the code against an older version,
they would get a fairly helpful error message:

.. code:: console

   $ python3.5 since-3.6.py
     File "since-3.6.py", line 1
       0_0  # Python >= 3.6 is required
         ^
   SyntaxError: invalid syntax

This may be a better approach than checking sys.version_info because
"if the source file contains syntax that is invalid [...], code that's 
supposed to check the version and throw a helpful exception will never run."¹

¹ https://news.ycombinator.com/item?id=31637428#31637543

.. vim:ft=rst ts=3 sts=3 sw=3 et
